# smartthermometer_client

./: Cargo.toml  README.md
src/: lib.rs  main.rs
