[package]
name = "smartthermometer_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smarthome = {path = "../smarthome"}
async_io = {path = "../async_io"}
tokio = { version = "1.15.0", features = ["net", "macros", "rt-multi-thread", "fs", "io-std", "io-util"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
